# actinia-statistic-plugin

./: .coveragerc  .flake8  .gitignore  CHANGELOG.md  CHANGELOG.rst  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tests_with_kvdb.sh  tests_with_redis.sh
.github/workflows/: python-publish.yml  tests.yml
docker/: Dockerfile  README.md  create_release_with_asset.sh
docker/actinia-plugin-tests/: Dockerfile  actinia-test.cfg
docs/: Makefile  conf.py  index.rst
examples/: area.geojson  area2.geojson  examples.md  points.geojson  points.json  points2.json  points_where.json
src/actinia_statistic_plugin/: endpoints.py  ephemeral_raster_area_stats.py  ephemeral_raster_area_stats_univar.py  ephemeral_strds_area_stats.py  ephemeral_strds_area_stats_univar.py  raster_sampling.py  response_models.py  skeleton.py  strds_sampling.py  strds_sampling_geojson.py  vector_sampling.py
tests/: conftest.py  test_raster_area_stats.py  test_raster_area_stats_univar.py  test_raster_sample.py  test_resource_base.py  test_skeleton.py  test_strds_area_stats.py  test_strds_area_stats_univar.py  test_strds_sample.py  test_vector_sample.py
