[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "actinia-statistic-plugin"
version = "0.3.0"
description = "Actinia plugin for efficient statistic computing"
readme = "README.md"
authors = [
    { name = "Markus Neteler"},
    { name = "Carmen Tawalika"},
    { name = "Anika Weinmann"},
    { name = "Lina Krisztian"},
    { name = "Soeren Gebbert"},
    { name = "Marc Jansen"},
    { name = "Julia Haas"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
keywords = [
    "processing",
    "earth observation",
    "cloud-based processing",
    "rest api",
    "gis",
    "grass gis",
    "osgeo",
    "stac",
]
dependencies = [
]

[project.optional-dependencies]
test = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/mundialis/actinia-statistic-plugin"
Tutorial = "https://mundialis.github.io/actinia_core"
API_Docs = "https://redocly.github.io/redoc/?url=https://actinia.mundialis.de/latest/swagger.json"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov actinia_statistic_plugin --cov-report term-missing --verbose --tb=line -x"
testpaths = [
    "tests",
]
